--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div id='header'></div>
-        <div id='program' name='program'></div>
+        <div id='program'></div>
         <div id='console'></div>
     </body>
 </html>
