--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,23 @@
     <body>
         <div id='header'></div>
         <div id='program'></div>
-        <div id='console'></div>
+
+        <div id='console'>
+            <div id="terminal-window">
+
+                <div id="terminal-toolbar">
+                    <div id="terminal-top">
+
+                        <div id="terminal-menu"></div>
+
+                    </div> <!-- </terminal-top> -->
+                </div> <!-- </terminal-toolbar> -->
+
+                <div id="terminal-body">
+                    <p></p>
+                </div>
+
+            </div> <!-- </terminal-window> -->
+
     </body>
 </html>
