Changing name in relevant places

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>WebSound</title>
+        <title>Whorl</title>
         <link rel="stylesheet" type="text/css" href="style.css">
 
         <script src="app.js"></script>
