--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,29 @@
     </head>
 
     <body>
-        <div id='header'></div>
+        <div id='header'>
+            <div id='menu'>
+
+                <span class='menu-item'>Whorl</span>
+
+                <span class='menu-item'data-jq-dropdown="#jq-dropdown-1">
+                    Demos
+                </span>
+                <div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip">
+                    <ul id="demolist" class="jq-dropdown-menu">
+                    </ul>
+                </div>
+
+                <span  class='menu-item'data-jq-dropdown="#jq-dropdown-2">
+                    Tutorials
+                </span>
+                <div id="jq-dropdown-2" class="jq-dropdown jq-dropdown-tip">
+                    <ul id="tutoriallist" class="jq-dropdown-menu">
+                    </ul>
+                </div>
+
+            </div>
+        </div>
         <div id='program'></div>
 
         <div id='console'>
