making normal mapping the editor default

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 
                 <span class='menu-item'>Whorl</span>
 
-                <span class='menu-item'data-jq-dropdown="#jq-dropdown-1">
+                <span class='menu-item' data-jq-dropdown="#jq-dropdown-1">
                     Demos
                 </span>
                 <div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip">
@@ -21,11 +21,19 @@
                     </ul>
                 </div>
 
-                <span  class='menu-item'data-jq-dropdown="#jq-dropdown-2">
+                <span  class='menu-item' data-jq-dropdown="#jq-dropdown-2">
                     Tutorials
                 </span>
                 <div id="jq-dropdown-2" class="jq-dropdown jq-dropdown-tip">
                     <ul id="tutoriallist" class="jq-dropdown-menu">
+                    </ul>
+                </div>
+
+                <span  class='menu-item' data-jq-dropdown="#jq-dropdown-3">
+                    Key Bindings
+                </span>
+                <div id="jq-dropdown-3" class="jq-dropdown jq-dropdown-tip">
+                    <ul id="keybindings" class="jq-dropdown-menu">
                     </ul>
                 </div>
 
