--- a/html/index.html
+++ b/html/index.html
@@ -3,61 +3,13 @@
         <title>Whorl</title>
         <link rel="stylesheet" type="text/css" href="style.css">
 
-        <script src="app.js"></script>
-
     </head>
 
     <body>
-        <div id='header'>
-            <div id='menu'>
-
-                <span class='menu-item'>Whorl</span>
-
-                <span class='menu-item' data-jq-dropdown="#jq-dropdown-1">
-                    Demos
-                </span>
-                <div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip">
-                    <ul id="demolist" class="jq-dropdown-menu">
-                    </ul>
-                </div>
-
-                <span  class='menu-item' data-jq-dropdown="#jq-dropdown-2">
-                    Tutorials
-                </span>
-                <div id="jq-dropdown-2" class="jq-dropdown jq-dropdown-tip">
-                    <ul id="tutoriallist" class="jq-dropdown-menu">
-                    </ul>
-                </div>
-
-                <span  class='menu-item' data-jq-dropdown="#jq-dropdown-3">
-                    Key Bindings
-                </span>
-                <div id="jq-dropdown-3" class="jq-dropdown jq-dropdown-tip">
-                    <ul id="keybindings" class="jq-dropdown-menu">
-                    </ul>
-                </div>
-
-            </div>
+        <div id='app'>
         </div>
-        <div id='program'></div>
 
-        <div id='console'>
-            <div id="terminal-window">
-
-                <div id="terminal-toolbar">
-                    <div id="terminal-top">
-
-                        <div id="terminal-menu"></div>
-
-                    </div> <!-- </terminal-top> -->
-                </div> <!-- </terminal-toolbar> -->
-
-                <div id="terminal-body">
-                    <p></p>
-                </div>
-
-            </div> <!-- </terminal-window> -->
-        </div>
+        <script src="app.js"></script>
 
     </body>
 </html>
